@@ -1269,14 +1269,7 @@ apr_byte_t oidc_metadata_client_parse(request_rec *r, oidc_cfg *cfg,
 			NULL);
 
 	if (token_endpoint_auth != NULL) {
-		if ((apr_strnatcmp(token_endpoint_auth, OIDC_PROTO_CLIENT_SECRET_POST)
-				== 0)
-				|| (apr_strnatcmp(token_endpoint_auth,
-								OIDC_PROTO_CLIENT_SECRET_BASIC) == 0)
-								|| (apr_strnatcmp(token_endpoint_auth,
-												OIDC_PROTO_CLIENT_SECRET_JWT) == 0)
-												|| (apr_strnatcmp(token_endpoint_auth,
-																OIDC_PROTO_PRIVATE_KEY_JWT) == 0)) {
+		if (oidc_valid_endpoint_auth_method(r->pool, token_endpoint_auth)) {
 			provider->token_endpoint_auth = apr_pstrdup(r->pool,
 					token_endpoint_auth);
 		} else {
