@@ -1,3 +1,6 @@
+12/22/2017
+- add explicit endpoint authentication method "bearer_access_token"
+
 12/21/2017
 - fix compiler warnings for OpenSSL 1.1.x
 - bump to 2.3.4rc1
